[gd_scene load_steps=2 format=3 uid="uid://8d22nx52u56"]

[ext_resource type="Script" uid="uid://pfhk1odaxqw7" path="res://scripts/main_game.gd" id="1_p8m3n"]

[node name="MainGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p8m3n")

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 3

[node name="TopPlayerArea" type="PanelContainer" parent="MainContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_vertical = 8

[node name="MarginContainer" type="MarginContainer" parent="MainContainer/TopPlayerArea"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MainContainer/TopPlayerArea/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="PlayerInfo" type="VBoxContainer" parent="MainContainer/TopPlayerArea/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PlayerName" type="Label" parent="MainContainer/TopPlayerArea/MarginContainer/HBoxContainer/PlayerInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Player 2"
horizontal_alignment = 2

[node name="CharacterName" type="Label" parent="MainContainer/TopPlayerArea/MarginContainer/HBoxContainer/PlayerInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Character: TBD"
horizontal_alignment = 2

[node name="TimerLabel" type="Label" parent="MainContainer/TopPlayerArea/MarginContainer/HBoxContainer/PlayerInfo"]
layout_mode = 2
theme_override_colors/font_color = Color(0.3, 1, 0.3, 1)
theme_override_font_sizes/font_size = 56
text = "Time: --:--"
horizontal_alignment = 2

[node name="CapturedLabel" type="Label" parent="MainContainer/TopPlayerArea/MarginContainer/HBoxContainer/PlayerInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Captured Pieces:"
horizontal_alignment = 2

[node name="CapturedPieces" type="HFlowContainer" parent="MainContainer/TopPlayerArea/MarginContainer/HBoxContainer/PlayerInfo"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="CharacterDisplay" type="Control" parent="MainContainer/TopPlayerArea/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(180, 180)
layout_mode = 2
size_flags_horizontal = 0

[node name="GameArea" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="ChessboardContainer" type="PanelContainer" parent="MainContainer/GameArea"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="MainContainer/GameArea/ChessboardContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="MainContainer/GameArea/ChessboardContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Chessboard" type="GridContainer" parent="MainContainer/GameArea/ChessboardContainer/MarginContainer/AspectRatioContainer"]
visibility_layer = 391
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
columns = 8

[node name="ScorePanel" type="PanelContainer" parent="MainContainer/GameArea"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="MarginContainer" type="MarginContainer" parent="MainContainer/GameArea/ScorePanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer/GameArea/ScorePanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="ScoreLabel" type="Label" parent="MainContainer/GameArea/ScorePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "SCORE"
horizontal_alignment = 1

[node name="Player1Score" type="VBoxContainer" parent="MainContainer/GameArea/ScorePanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/GameArea/ScorePanel/MarginContainer/VBoxContainer/Player1Score"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Player 1"

[node name="ScoreValue" type="Label" parent="MainContainer/GameArea/ScorePanel/MarginContainer/VBoxContainer/Player1Score"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "0"

[node name="HSeparator" type="HSeparator" parent="MainContainer/GameArea/ScorePanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Player2Score" type="VBoxContainer" parent="MainContainer/GameArea/ScorePanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/GameArea/ScorePanel/MarginContainer/VBoxContainer/Player2Score"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Player 2"

[node name="ScoreValue" type="Label" parent="MainContainer/GameArea/ScorePanel/MarginContainer/VBoxContainer/Player2Score"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "0"

[node name="HSeparator2" type="HSeparator" parent="MainContainer/GameArea/ScorePanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TurnIndicator" type="Label" parent="MainContainer/GameArea/ScorePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "White's Turn"
horizontal_alignment = 1

[node name="HSeparator3" type="HSeparator" parent="MainContainer/GameArea/ScorePanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="GameStats" type="VBoxContainer" parent="MainContainer/GameArea/ScorePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MovesLabel" type="Label" parent="MainContainer/GameArea/ScorePanel/MarginContainer/VBoxContainer/GameStats"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Moves: 0"

[node name="CapturedLabel" type="Label" parent="MainContainer/GameArea/ScorePanel/MarginContainer/VBoxContainer/GameStats"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Captured Pieces: 0"

[node name="MenuButton" type="Button" parent="MainContainer/GameArea/ScorePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "MENU"

[node name="ScoreToggleContainer" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 0
alignment = 1

[node name="ScoreToggleButton" type="Button" parent="MainContainer/ScoreToggleContainer"]
custom_minimum_size = Vector2(60, 40)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
text = ">"

[node name="BottomPlayerArea" type="PanelContainer" parent="MainContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_vertical = 8

[node name="MarginContainer" type="MarginContainer" parent="MainContainer/BottomPlayerArea"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MainContainer/BottomPlayerArea/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="CharacterDisplay" type="Control" parent="MainContainer/BottomPlayerArea/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(180, 180)
layout_mode = 2
size_flags_horizontal = 0

[node name="PlayerInfo" type="VBoxContainer" parent="MainContainer/BottomPlayerArea/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PlayerName" type="Label" parent="MainContainer/BottomPlayerArea/MarginContainer/HBoxContainer/PlayerInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Player 1"

[node name="CharacterName" type="Label" parent="MainContainer/BottomPlayerArea/MarginContainer/HBoxContainer/PlayerInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Character: TBD"

[node name="TimerLabel" type="Label" parent="MainContainer/BottomPlayerArea/MarginContainer/HBoxContainer/PlayerInfo"]
layout_mode = 2
theme_override_colors/font_color = Color(0.3, 1, 0.3, 1)
theme_override_font_sizes/font_size = 56
text = "Time: --:--"

[node name="CapturedLabel" type="Label" parent="MainContainer/BottomPlayerArea/MarginContainer/HBoxContainer/PlayerInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Captured Pieces:"

[node name="CapturedPieces" type="HFlowContainer" parent="MainContainer/BottomPlayerArea/MarginContainer/HBoxContainer/PlayerInfo"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[connection signal="pressed" from="MainContainer/GameArea/ScorePanel/MarginContainer/VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
